--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://user_01:a1b2c3d4@cluster0.wpilqu8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET='PASSWORDSECRET'
